--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,10 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
-[Ll]og/
+#[Ll]og/
+
+#We do want things in a [Dd]ebugging folder. Eg: Shaders, debug logs etc
+![Dd]ebugging/**
 
 # Visual Studio 2015 cache/options directory
 .vs/
