Started work on graphics startup
Eg: Enumerating physical devices and output adapters (monitors)

--- a/Engine/ProjectFiles/MGEngine/MGEngine.vcxproj
+++ b/Engine/ProjectFiles/MGEngine/MGEngine.vcxproj
@@ -127,13 +127,26 @@
     <ClInclude Include="..\..\Source\Runtime\Core\CoreTypes.h" />
     <ClInclude Include="..\..\Source\Runtime\Core\Engine\Engine.h" />
     <ClInclude Include="..\..\Source\Runtime\Debugging\Log\DebugLog.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\Application\Application.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\Application\IApplication.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\Application\Win32\Win32Application.h" />
+    <ClInclude Include="..\..\Source\Runtime\Graphics\DXGIWrapper\DXGIWrapper.h" />
+    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsAPIStartup\D3D12\D3D12GraphicsAPIStartup.h" />
+    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsAPIStartup\GraphicsAPIStartup.h" />
+    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsAPIStartup\IGraphicsAPIStartup.h" />
+    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsSystemInfo\D3D12\D3D12GraphicsSystemInfo.h" />
+    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsSystemInfo\GraphicsSystemInfo.h" />
+    <ClInclude Include="..\..\Source\Runtime\Graphics\GraphicsSystemInfo\IGraphicsSystemInfo.h" />
+    <ClInclude Include="..\..\Source\Runtime\Graphics\LowLevelGraphics\LowLevelGraphics.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformTimer\IPlatformTimer.h" />
     <ClInclude Include="..\..\Source\Runtime\HAL\PlatformTimer\PlatformTimer.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\Window\IWindow.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\Window\Win32\Win32Window.h" />
-    <ClInclude Include="..\..\Source\Runtime\HAL\Window\Window.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformTimer\Win32\Win32PlatformTimer.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformWindow\IPlatformWindow.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformWindow\PlatformWindow.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\PlatformWindow\Win32\Win32PlatformWindow.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\Platform\IPlatform.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\Platform\Platform.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\Platform\Win32\Win32Platform.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\SystemInfo\ISystemInfo.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\SystemInfo\SystemInfo.h" />
+    <ClInclude Include="..\..\Source\Runtime\HAL\SystemInfo\Win32\Win32SystemInfo.h" />
     <ClInclude Include="..\..\Source\Runtime\Includes\DebugIncludes.h" />
     <ClInclude Include="..\..\Source\Runtime\Includes\GraphicsIncludes.h" />
     <ClInclude Include="..\..\Source\Runtime\Includes\MathIncludes.h" />
@@ -146,9 +159,14 @@
   <ItemGroup>
     <ClCompile Include="..\..\Source\Runtime\Core\Engine\Engine.cpp" />
     <ClCompile Include="..\..\Source\Runtime\Debugging\Log\DebugLog.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\HAL\Application\Win32\Win32Application.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\HAL\PlatformTimer\PlatformTimer.cpp" />
-    <ClCompile Include="..\..\Source\Runtime\HAL\Window\Win32\Win32Window.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\Graphics\DXGIWrapper\DXGIWrapper.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\Graphics\GraphicsAPIStartup\D3D12\D3D12GraphicsAPIStartup.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\Graphics\GraphicsSystemInfo\D3D12\D3D12GraphicsSystemInfo.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\Graphics\LowLevelGraphics\LowLevelGraphics.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\HAL\PlatformTimer\Win32\Win32PlatformTimer.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\HAL\PlatformWindow\Win32\Win32PlatformWindow.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\HAL\Platform\Win32\Win32Platform.cpp" />
+    <ClCompile Include="..\..\Source\Runtime\HAL\SystemInfo\Win32\Win32SystemInfo.cpp" />
     <ClCompile Include="..\..\Source\Runtime\Rendering\VirtualCamera\VirtualCamera.cpp" />
     <ClCompile Include="..\..\Source\ThirdParty\GeometryGenerator\GeometryGenerator.cpp" />
   </ItemGroup>
